# AutonomousDriving

./: .gitignore  README.md  readme.txt  workspace.code-workspace
install/: local_setup.sh  setup.sh
install/applanix_driver/include/parse_gsof/: gsofParser.hpp
install/applanix_driver/lib/applanix_driver/: parse_gsof_exe  read_gsof_exe
install/applanix_driver/share/applanix_driver/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/applanix_driver/share/applanix_driver/cmake/: ament_cmake_export_libraries-extras.cmake  applanix_driverConfig.cmake
install/applanix_driver/share/applanix_driver/config/: test_gps.rviz
install/autoware_auto_msgs/share/autoware_auto_msgs/: local_setup.sh  package.sh
install/file_trajectory_planner/include/file_trajectory_planner/: file_trajectory_planner.hpp
install/file_trajectory_planner/lib/file_trajectory_planner/: file_trajectory_planner_exe
install/file_trajectory_planner/share/file_trajectory_planner/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/kia_test/share/kia_test/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/lexus_rx_450h_description/share/lexus_rx_450h_description/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/minimal_simulator/share/minimal_simulator/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/motion_model_testing_simulator/share/motion_model_testing_simulator/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/pid_velocity_control/include/pid_velocity_control/: pid_velocity_control.hpp
install/pid_velocity_control/lib/pid_velocity_control/: pid_velocity_control_exe
install/pid_velocity_control/share/pid_velocity_control/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/record_traj/lib/record_traj/: record_traj_exe
install/record_traj/share/record_traj/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/robot_steering_converter/share/robot_steering_converter/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/simulation_sync/lib/simulation_sync/: simulation_sync_main.py
install/simulation_sync/share/simulation_sync/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/trajectory_following/include/trajectory_following/: trajectory_following.hpp
install/trajectory_following/lib/trajectory_following/: trajectory_following_exe
install/trajectory_following/share/trajectory_following/: package.sh
log/: latest_build
src/applanix_driver/: CMakeLists.txt
src/applanix_driver/include/read_gsof/: rx.hpp
src/applanix_driver/launch/: test_gps.launch.py
src/applanix_driver/src/parse_gsof/: geo_pos_conv.cpp  gsof_parser.cpp  gsof_parser_node.cpp
src/applanix_driver/src/read_gsof/: header.h  port.yaml  rx.cpp  socket_node.cpp
src/file_trajectory_planner/: CMakeLists.txt  package.xml  test.txt
src/file_trajectory_planner/launch/: file_trajectory_planner.launch.py  file_trajectory_planner_lgsvl.launch.py  pure_pursuit_test.launch.py
src/file_trajectory_planner/param/: create_trajectory.ods
src/file_trajectory_planner/param/trajectories/: full_trajectory-131.txt  full_trajectory-171.txt  full_trajectory_80.txt  traj2.txt  vrx_short_line.txt
src/file_trajectory_planner/param/trajectories/Scenario_1/: scenario 1 enemy car moves 1 lane to the left.txt  traj1.txt
src/file_trajectory_planner/param/trajectories/Scenario_2/: scenario 2 enemy car moves 2 lanes to the left.txt  traj1.txt
src/file_trajectory_planner/param/trajectories/option2/: traj1 (copy).txt  traj2.txt
src/file_trajectory_planner/param/trajectories/option7/: traj1.txt
src/file_trajectory_planner/param/trajectories/org/: traj2.txt  traj3.txt  traj4.txt
src/file_trajectory_planner/src/: file_trajectory_planner.cpp  file_trajectory_planner_node.cpp
src/idan_driver/: package.xml
src/idan_driver/src/can_communication_titan/: can_communication_node.cpp  titan_can.cpp
src/idan_driver/src/listener/: listener.cpp
src/idan_driver/src/sender/: sender.cpp  sender_lib.cpp
src/kia_test/: CMakeLists.txt  package.xml
src/kia_test/config/: kia.rviz
src/kia_test/launch/: drive_vehicle.launch.py  kia_drive.launch.py
src/minimal_simulator/: CMakeLists.txt
src/minimal_simulator/launch/: four_vehicles_simulator.launch.py  four_vehicles_simulator_all_avoiding.launch.py  minimal_simulator.launch.py  multi_simulator.launch.py  two_vehicles_simulator.launch.py  two_vehicles_simulator_ego_lead.launch.py
src/minimal_simulator/minimal_simulator/: minimal_simulator_node.py
src/minimal_simulator/param/vehicles/: ego_vehicle.param (copy).yaml  ego_vehicle_tf.param.yaml  vehicle1.param.yaml  vehicle2.param.yaml  vehicle3.param.yaml  vehicle4.param.yaml  vehicle5.param.yaml  vehicle7.param.yaml
src/pid_velocity_control/: CMakeLists.txt
src/pid_velocity_control/param/: pid.param.yaml
src/pid_velocity_control/src/: pid_velocity_control.cpp  pid_velocity_control_node.cpp
src/record_traj/: CMakeLists.txt
src/record_traj/launch/: simple_controller_test.launch.py
src/record_traj/src/: record_traj_node.cpp
src/robot_steering_converter/: CMakeLists.txt  package.xml
src/robot_steering_converter/config/: manual_example.rviz
src/robot_steering_converter/launch/: manual_steering.launch.py  manual_steering_example.launch.py
src/robot_steering_converter/robot_steering_converter/: robot_steering_converter_main.py
src/simulation_sync/: CMakeLists.txt
src/simulation_sync/param/: ego_vehicle.param.yaml  il15_sim.param.yaml  vehicle3.param.yaml
src/simulation_sync/simulation_sync/: simulation_sync_node.py
src/trajectory_following/: CMakeLists.txt
src/trajectory_following/src/: trajectory_following.cpp  trajectory_following_node.cpp
(+112 files in other folders)
