<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kia_test</name>
  <version>1.0.0</version>
  <description>Contains launch files and configs to run different demos</description>
  <maintainer email="gavrielhartmann@gmail.com">Gabriel Hartmann</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>lexus_rx_450h_description</exec_depend>
  <exec_depend>applanix_driver</exec_depend>
  <exec_depend>idan_driver</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
